[package]
name = "libre-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
sha2 = "0.10"           # For hashing
curve25519-dalek = "4"  # For elliptic curve ops (used in CryptoNote)
thiserror = "1.0"       # For error handling
log = "0.4"
env_logger = "0.9"
clap = { version = "4.1", features = ["derive"] }
bincode = "1.3"